Continue building out Python project structure
Includes setuptools and requirements configs, a placerholder Dockerfile, and stubs for pytest-based unit tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=43.0.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [tool.isort]
 profile = "black"
 
@@ -6,3 +10,6 @@ line-length = 120
 
 [tool.mypy]
 strict = true
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
